--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "express": "^4.16.3",
     "node-static": "^0.7.10",
     "socket.io": "^2.1.1"
   }
