--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "author": "Microsoft",
   "engines": {
-    "node": ">=6.9.1"
+    "node": ">=6.9.1",
+    "start": "node index.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
